--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
               <p style="text-align:center">
                 <a href="mailto:xinyuexu1999@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/Resume.pdf">CV</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=9AthkQ0AAAAJ&hl=zh-CN">Google Scholar</a> 
+                <a href="https://scholar.google.com/citations?user=9AthkQ0AAAAJ&hl=zh-CN">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://www.linkedin.com/in/xinyue-thea-xu-a15984179/">LinkedIn</a> 
                 <!-- &nbsp/&nbsp -->
-                <!-- <a href="https://twitter.com/jon_barron">Twitter</a> &nbsp/&nbsp -->
                 <!-- <a href="https://github.com/jonbarron/">Github</a> -->
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/JonBarron.jpg"><img style="width:100%;max-width:100%" alt="profile photo" src="images/JonBarron_circle.jpg" class="hoverZoomLink"></a>
+              <a href="images/my.png"><img style="width:60%;max-width:80%" alt="profile photo" src="images/my.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -49,7 +49,7 @@
             <heading>Research</heading>
             <p>
               My research interest is to apply Machine Learning into Medical Image Analysis. In particluar,
-              I am interest in Neural Architecture Search in AutoML, Interpretable AI and Clustering Analysis.
+              I am interested in Neural Architecture Search in AutoML, Interpretable AI and Clustering Analysis.
             </p>
           </td>
         </tr>
@@ -66,22 +66,22 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
-          <tr onmouseout="malle_stop()" onmouseover="malle_start()">
+          <tr onmouseout="ils_stop()" onmouseover="ils_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='malle_image'>
-                  <img src='images/MalleConv_after.jpg' width="160"></div>
-                <img src='images/MalleConv_before.jpg' width="160">
+                <div class="two" id='ils_image'>
+                  <img src='images/shape.png' width="160"></div>
+                <img src='images/shape.png' width="160">
               </div>
               <script type="text/javascript">
-                function malle_start() {
-                  document.getElementById('malle_image').style.opacity = "1";
+                function ils_start() {
+                  document.getElementById('ils_image').style.opacity = "1";
                 }
 
-                function malle_stop() {
-                  document.getElementById('malle_image').style.opacity = "0";
+                function ils_stop() {
+                  document.getElementById('ils_image').style.opacity = "0";
                 }
-                malle_stop()
+                ils_stop()
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -96,27 +96,27 @@
               ANU Database, may be released later.
               <p></p>
               <p>
-              Design
+                This thesis develops an enhanced version based on the original Iterative Label
+                Spreading Clustering which is specially designed for materials science, and aim to
+                become faster and have fewer hyperparameters.
               </p>
             </td>
           </tr>
 					
-          <tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
+          <tr onmouseout="gnns_stop()" onmouseover="gnns_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='nerfsuper_image'><video  width=100% height=100% muted autoplay loop>
-                <source src="images/nerf_supervision.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-                </video></div>
-                <img src='images/nerf_supervision.jpg' width="160">
+                <div class="two" id='gnns_image'>
+                  <img src='images/GNNS.png' width="160"></div>
+                <img src='images/GNNS.png' width="160">
               </div>
               <script type="text/javascript">
-                function nerfsuper_start() {
-                  document.getElementById('nerfsuper_image').style.opacity = "1";
+                function gnns_start() {
+                  document.getElementById('gnns_image').style.opacity = "1";
                 }
 
-                function nerfsuper_stop() {
-                  document.getElementById('nerfsuper_image').style.opacity = "0";
+                function gnns_stop() {
+                  document.getElementById('gnns_image').style.opacity = "0";
                 }
                 nerfsuper_stop()
               </script>
@@ -144,24 +144,23 @@
             </td>
           </tr>
 
-          <tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
+
+          <tr onmouseout="fuzzy_stop()" onmouseover="fuzzy_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='nerfsuper_image'><video  width=100% height=100% muted autoplay loop>
-                <source src="images/nerf_supervision.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-                </video></div>
-                <img src='images/nerf_supervision.jpg' width="160">
+                <div class="two" id='fuzzy_image'>
+                  <img src='images/fuzzy.webp' width="160"></div>
+                <img src='images/fuzzy.webp' width="160">
               </div>
               <script type="text/javascript">
-                function nerfsuper_start() {
-                  document.getElementById('nerfsuper_image').style.opacity = "1";
+                function fuzzy_start() {
+                  document.getElementById('fuzzy_image').style.opacity = "1";
                 }
 
-                function nerfsuper_stop() {
-                  document.getElementById('nerfsuper_image').style.opacity = "0";
+                function fuzzy_stop() {
+                  document.getElementById('fuzzy_image').style.opacity = "0";
                 }
-                nerfsuper_stop()
+                fuzzy_stop()
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -170,7 +169,7 @@
               </a>
               <br>
               <strong>Xinyue Xu</strong>,  
-              <a href="">Xiang Ding</a>, 
+              Xiang Ding, 
               <a href="https://scholar.google.com/citations?user=z-fQRcUAAAAJ&hl=zh-CN">Zhenyue Qin</a>, 
               <a href="https://scholar.google.com/citations?user=SLCxOTEAAAAJ&hl=zh-CN">Yang Liu</a>
               <br>
@@ -185,24 +184,22 @@
             </td>
           </tr>
 
-          <tr onmouseout="nerfsuper_stop()" onmouseover="nerfsuper_start()">
+          <tr onmouseout="nad_stop()" onmouseover="nad_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
               <div class="one">
-                <div class="two" id='nerfsuper_image'><video  width=100% height=100% muted autoplay loop>
-                <source src="images/nerf_supervision.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-                </video></div>
-                <img src='images/nerf_supervision.jpg' width="160">
+                <div class="two" id='nad_image'>
+                  <img src='images/nad.gif' width="160"></div>
+                <img src='images/nad.gif' width="160">
               </div>
               <script type="text/javascript">
-                function nerfsuper_start() {
-                  document.getElementById('nerfsuper_image').style.opacity = "1";
+                function nad_start() {
+                  document.getElementById('nad_image').style.opacity = "1";
                 }
 
-                function nerfsuper_stop() {
-                  document.getElementById('nerfsuper_image').style.opacity = "0";
+                function nad_stop() {
+                  document.getElementById('nad_image').style.opacity = "0";
                 }
-                nerfsuper_stop()
+                nad_stop()
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
