--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <p style="text-align:center">
                 <name>Xinyue (Thea) XU</name>
               </p>
-              <p>I am a PhD student advised by <a href="https://xmengli.github.io/"> Prof. Xiaomeng LI</a> at The Hong Kong University of Science and Technology. 
+              <p>I am a PhD student advised by <a href="https://xmengli.github.io/"> Prof. Xiaomeng Li</a> at The Hong Kong University of Science and Technology. 
                 Previously, I received my Bachelor degree (with Honours) at The Australian National University, 
                 advised by <a href="https://en.wikipedia.org/wiki/Amanda_Barnard"> Senior Prof. Amanda Barnard</a>
                 and supervised by <a href="https://scholar.google.com.au/citations?user=r2-lXicAAAAJ&hl=en"> Dr. Amanda Parker</a>.
@@ -38,7 +38,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%">
-              <a href="images/my.png"><img style="width:80%;max-width:80%;height:80%;" alt="profile photo" src="images/my.png" class="hoverZoomLink"></a>
+              <a href="images/my.png"><img style="width:50%;max-width:50%;height:50%;" alt="profile photo" src="images/my.png" class="hoverZoomLink"></a>
             </td>
           </tr>
         </tbody></table>
@@ -49,7 +49,7 @@
             <heading>Research</heading>
             <p>
               My research interest is to apply Machine Learning into Medical Image Analysis. In particluar,
-              I am interested in Neural Architecture Search in AutoML, Interpretable AI and Clustering Analysis.
+              I am interested in Neural Architecture Search, Interpretable AI and Clustering Analysis.
             </p>
           </td>
         </tr>
