--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <title>Xinyue (Thea) XU</title>
   
   <meta name="author" content="Xinyue XU">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<!--   <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+
   
   <link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link rel="icon" href="images/dog.ico">
