--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 </head>
 
 <body>
-  <div class="div1"></div>
+  <div class="div1">
   <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding:0px">
       <td style="padding:0px">
@@ -283,6 +283,7 @@
       </td>
     </tr>
   </table>
+</div>
 </body>
 
 </html>
