--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>Research</heading>
             <p>
-              My research interest is to apply Machine Learning into Medical Image Analysis. In particluar,
-              I am interested in Neural Architecture Search, Interpretable AI and Clustering Analysis.
+              My research interest is to apply Machine Learning to interdisciplinary (medical image analysis, material science, environmental science etc.). In particluar,
+              I am interested in AutoML, Interpretable AI and Clustering Analysis.
             </p>
           </td>
         </tr>
@@ -233,7 +233,7 @@
           <ul>
             <li>Hong Kong PhD Fellowship</li>
             <li>HKUST RedBird PhD Award </li>
-            <li>IEEE Student Member</li>
+            <li>IEEE Member</li>
             <li>APNNS Student Member</li>
             <li>Australian Computer Society Member</li>
           </ul> 
