--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
               <p style="text-align:center">
                 <name>Xinyue (Thea) XU</name>
               </p>
-              <p>I am a PhD student advised by <a href="https://xmengli.github.io/"> Prof. Xiaomeng Li</a> at The Hong Kong University of Science and Technology. 
-                Previously, I received my Bachelor degree (with Honours) at The Australian National University, 
-                advised by <a href="https://en.wikipedia.org/wiki/Amanda_Barnard"> Senior Prof. Amanda Barnard</a>
+              <p>I am currently a PhD student advised by <a href="https://xmengli.github.io/"> Prof. Xiaomeng Li</a> at The Hong Kong University of Science and Technology. 
+                Prior of this, I completed my Bachelor degree (with Honours) at The Australian National University, 
+                where I had the privilege of being advised by <a href="https://en.wikipedia.org/wiki/Amanda_Barnard"> Senior Prof. Amanda Barnard</a>
                 and supervised by <a href="https://scholar.google.com.au/citations?user=r2-lXicAAAAJ&hl=en"> Dr. Amanda Parker</a>.
-                I am fortune to work with <a href="http://www.wanghao.in/"> Prof. Hao Wang</a>  and <a href="http://people.csail.mit.edu/lumi/"> Dr. Lu Mi</a> 
-                at MIT Computational Connectomics Group,
-                <a href="https://guo-gang.com/"> Dr. Gang Guo </a> at NUS as Research Assistants.
+                My research journey includes experiences as a Research Assistant at MIT's Computational Connectomics Group lead by <a href="https://people.csail.mit.edu/shanir/"> Prof. Nir Shavit</a>,
+                where I had the opportunity to collaborate with <a href="http://www.wanghao.in/"> Prof. Hao Wang</a>  and <a href="http://people.csail.mit.edu/lumi/"> Dr. Lu Mi</a>.
+                In addition, I also worked with <a href="https://guo-gang.com/"> Dr. Gang Guo </a> at NUS as Research Assistants.
               </p>
               <p style="text-align:center">
                 <a href="mailto:xinyuexu1999@gmail.com">Email</a> &nbsp/&nbsp
@@ -63,6 +63,9 @@
         <tr>
         <td style="padding:20px;width:100%;vertical-align:middle">
           <heading>Publications</heading>
+          <p>
+            * denotes equal contribution.
+          </p>
         </td>
       </tr>
     </tbody></table>
