--- a/index.html
+++ b/index.html
@@ -108,6 +108,53 @@
               </p>
             </td>
           </tr>
+
+          <tr onmouseout="est_stop()" onmouseover="est_start()">
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <div class="one">
+                <div class="two" id='est_image'>
+                  <img src='images/est.png' width="160"></div>
+                <img src='images/est.png' width="160">
+              </div>
+              <script type="text/javascript">
+                function est_start() {
+                  document.getElementById('est_image').style.opacity = "1";
+                }
+
+                function est_stop() {
+                  document.getElementById('est_image').style.opacity = "0";
+                }
+                est_stop()
+              </script>
+            </td>
+            <td style="padding:20px;width:75%;vertical-align:middle">
+              <a href="">
+                <papertitle>Exploring the Complexities of Dissolved Organic Matter Photochemistry from the Molecular Level by Using Machine Learning Approaches</papertitle>
+              </a>
+              <br>
+              Chen Zhao&#42,
+              <strong>Xinyue Xu&#42</strong>,
+              Hongmei Chen,
+              Fengwen Wang, 
+              Penghui Li, 
+              Chen He, 
+              Quan Shi, 
+              Yuanbi Yi, 
+              Xiaomeng Li, 
+              Siliang Li, 
+              Ding He
+              <br>
+              <em>Environmental Science & Technology (ES&T)</em>, 2023
+              <br>
+              <a href="https://pubs.acs.org/doi/full/10.1021/acs.est.3c00199">Paper</a>	
+              <p></p>
+              <p>
+                Photochemical reactions are essential components altering dissolved organic matter (DOM) chemistry. 
+                We first used machine learning approaches to compatibly integrate existing irradiation experiments 
+                and provide novel insights into the estuarine DOM transformation processes.
+              </p>
+            </td>
+          </tr>
 					
           <tr onmouseout="gnns_stop()" onmouseover="gnns_start()">
             <td style="padding:20px;width:25%;vertical-align:middle">
@@ -124,7 +171,7 @@
                 function gnns_stop() {
                   document.getElementById('gnns_image').style.opacity = "0";
                 }
-                nerfsuper_stop()
+                gnns_stop()
               </script>
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
@@ -132,11 +179,11 @@
                 <papertitle>Subgraph frequency distribution estimation using graph neural network</papertitle>
               </a>
               <br>
-              <a href="https://deepai.org/profile/zhongren-chen">Zhongren Chen&#42</a>, 
+              Zhongren Chen&#42, 
               <strong>Xinyue Xu&#42</strong>,  
-              <a href="https://scholar.google.com/citations?user=v2eJuUkAAAAJ&hl=zh-CN">Shengyi Jiang</a>, 
-              <a href="https://scholar.google.com/citations?user=NrOA9QoAAAAJ&hl=zh-CN">Hao Wang</a>, 
-              <a href="https://scholar.google.com/citations?user=vokCG-MAAAAJ&hl=zh-CN">Lu Mi</a>
+              Shengyi Jiang, 
+              Hao Wang, 
+              Lu Mi
               <br>
               <em>KDD Workshop</em>, 2022  
               <br>
@@ -176,8 +223,8 @@
               <br>
               <strong>Xinyue Xu</strong>,  
               Xiang Ding, 
-              <a href="https://scholar.google.com/citations?user=z-fQRcUAAAAJ&hl=zh-CN">Zhenyue Qin</a>, 
-              <a href="https://scholar.google.com/citations?user=SLCxOTEAAAAJ&hl=zh-CN">Yang Liu</a>
+              Zhenyue Qin, 
+              Yang Liu
               <br>
               <em>ICONIP</em>, 2021  
               <br>
@@ -232,13 +279,13 @@
       <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
         <tr>
         <td style="padding:20px;width:100%;vertical-align:middle">
-          <heading>Honours and Membership</heading>
+          <heading>Honours, Membership and Sevices</heading>
           <ul>
             <li>Hong Kong PhD Fellowship</li>
             <li>HKUST RedBird PhD Award </li>
             <li>IEEE Member</li>
-            <li>APNNS Student Member</li>
             <li>Australian Computer Society Member</li>
+            <li>Asia Pacific Neural Network Society Member</li>
           </ul> 
         </td>
       </tr>
