--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 and supervised by <a href="https://scholar.google.com.au/citations?user=r2-lXicAAAAJ&hl=en"> Dr. Amanda Parker</a>.
                 My research journey includes experiences as a Research Assistant at MIT's Computational Connectomics Group lead by <a href="https://people.csail.mit.edu/shanir/"> Prof. Nir Shavit</a>,
                 where I had the opportunity to collaborate with <a href="http://www.wanghao.in/"> Prof. Hao Wang</a>  and <a href="http://people.csail.mit.edu/lumi/"> Dr. Lu Mi</a>.
-                In addition, I also worked with <a href="https://guo-gang.com/"> Dr. Gang Guo </a> at NUS as Research Assistants.
+                Furthermore, I had served as a Research Assistant under the supervision of <a href="https://guo-gang.com/"> Dr. Gang Guo </a> at NUS.
               </p>
               <p style="text-align:center">
                 <a href="mailto:xinyuexu1999@gmail.com">Email</a> &nbsp/&nbsp
@@ -53,7 +53,7 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>Research</heading>
             <p>
-              My research interest is to apply Machine Learning to interdisciplinary (medical image analysis, material science, environmental science etc.). In particluar,
+              My research interest is to apply Machine Learning to interdisciplinary (medical image analysis, material science, environmental science etc.) In particluar,
               I am interested in AutoML, Interpretable AI and Clustering Analysis.
             </p>
           </td>
@@ -187,7 +187,7 @@
               Hao Wang, 
               Lu Mi
               <br>
-              <em>KDD Workshop</em>, 2022  
+              <em>KDD Deep Learning on Graphs</em>, 2022  
               <br>
 							<a href="https://arxiv.org/abs/2207.06684">arXiv</a>		
               <p></p>
