--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Xinyue (Thea) XU</title>
+  <title>Xinyue XU</title>
   
   <meta name="author" content="Xinyue XU">
 <!--   <meta name="viewport" content="width=device-width, initial-scale=1"> -->
@@ -21,7 +21,7 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Xinyue (Thea) XU</name>
+                <name>Xinyue XU</name>
               </p>
               <p>I am currently a PhD student advised by <a href="https://xmengli.github.io/"> Prof. Xiaomeng Li</a> at The Hong Kong University of Science and Technology. 
                 Prior of this, I completed my Bachelor degree (with Honours) at The Australian National University, 
