--- a/index.html
+++ b/index.html
@@ -104,13 +104,11 @@
               <br>
               <em>ICONIP</em>, 2023
               <br>
-              <a href="https://pubs.acs.org/doi/pdf/10.1021/acs.est.3c00199">Paper</a>	
+              <a href="https://arxiv.org/abs/2305.15777">Paper</a>	
               <p></p>
               <p>
                 Medical image data are often limited due to the expensive acquisition and annotation process. Hence, training a deep-learning model with only raw data can easily lead to overfitting.
                 To this end, we present a novel method, called Dynamic Data Augmentation (DDAug), which is efficient and has negligible computation cost. 
-                Our DDAug develops a hierarchical tree structure to represent various augmentations and utilizes an efficient Monte-Carlo tree searching algorithm to update, prune, and sample the tree. 
-                Experiments on multiple Prostate MRI datasets show that our method outperforms the current state-of-the-art data augmentation strategies.
               </p>
             </td>
           </tr>
