--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <br>
               <em>ICONIP</em>, 2023
               <br>
-              <a href="https://arxiv.org/abs/2305.15777">Paper</a>	
+              <a href="https://arxiv.org/abs/2305.15777">Paper</a>/<a href="https://github.com/xmed-lab/DDAug">Code</a>	
               <p></p>
               <p>
                 Medical image data are often limited due to the expensive acquisition and annotation process. Hence, training a deep-learning model with only raw data can easily lead to overfitting.
