--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 
 <body>
 
-  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+  <table style="width:120%;max-width:900px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
     <tr style="padding:0px">
       <td style="padding:0px">
-        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <table style="width:120%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
                 <name>Xinyue XU</name>
               </p>
-              <p>I am currently a PhD candidate advised by <a href="https://xmengli.github.io/"> Prof. Xiaomeng Li</a> at The Hong Kong University of Science and Technology. 
+              <p>I am currently a PhD Candidate at The Hong Kong University of Science and Technology, 
+                advised by <a href="https://xmengli.github.io/"> Prof. Xiaomeng Li</a> and co-advised by <a href="http://www.wanghao.in/"> Prof. Hao Wang</a>. 
                 Prior of this, I completed my Bachelor degree (with Honours) at The Australian National University, 
                 where I had the privilege of being advised by <a href="https://en.wikipedia.org/wiki/Amanda_Barnard"> Senior Prof. Amanda Barnard</a>
                 and supervised by <a href="https://scholar.google.com.au/citations?user=r2-lXicAAAAJ&hl=en"> Dr. Amanda Parker</a>.
@@ -53,8 +54,14 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>Research</heading>
             <p>
-              My research interest is to apply Machine Learning to interdisciplinary (medical image analysis, environmental science, material science etc.) In particluar,
-              I am interested in Interpretable ML, AutoML and Clustering Analysis.
+              My research interest is to apply Machine Learning to interdisciplinary (medical image analysis, environmental science, material science etc.) 
+              <br>
+              In particluar, I am interested in:
+              <ul>
+              <li>Interpretable ML (Concept-Based Explanations, Rule-Based Models, etc.)</li>
+              <li>AutoML (Neural Architecture Search, Hyperparameter Optimization, etc.)</li>
+              <li>Clustering Analysis (Label Spreading/Propagation)</li>
+              </ul>
             </p>
           </td>
         </tr>
@@ -66,7 +73,7 @@
         <td style="padding:20px;width:100%;vertical-align:middle">
           <heading>Publications</heading>
           <p>
-            * denotes equal contribution.
+            "*" indicates equal contribution, "_" indicates equal advising.
           </p>
         </td>
       </tr>
@@ -100,8 +107,8 @@
               <strong>Xinyue Xu</strong>,
               Yi Qin,
               Lu Mi,
-              Hao Wang, 
-              Xiaomeng Li
+              <u>Hao Wang</u>, 
+              <u>Xiaomeng Li</u>
               <br>
               <em>ICLR</em>, 2024
               <br>
