--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
             <li>Australian Computer Society Member</li>
             <li>Asia Pacific Neural Network Society Member</li>
             <li>ICONIP 2023 PC Member</li>
+            <li>Teaching Assistant for ELEC 1200 A System View of Communications: from Signals to Packets, 2023. </li>
           </ul> 
         </td>
       </tr>
