change paper title

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </td>
             <td style="padding:20px;width:75%;vertical-align:middle">
               <a href="https://openreview.net/forum?id=I1quoTXZzc">
-                <papertitle>Energy-Based Concept Bottleneck Models: Unifying Prediction, Concept Intervention, and Conditional Interpretations</papertitle>
+                <papertitle>Energy-Based Concept Bottleneck Models: Unifying Prediction, Concept Intervention, and Probabilistic Interpretations</papertitle>
               </a>
               <br>
               <strong>Xinyue Xu</strong>,
