--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <br>
               <em>ICLR</em>, 2024
               <br>
-              <a href="https://arxiv.org/abs/2401.14142">Paper</a>/<a href="">Code</a> (coming soon)	
+              <a href="https://arxiv.org/abs/2401.14142">Paper</a>/<a href="https://github.com/xmed-lab/ECBM">Code</a>	
               <p></p>
               <p>
                 We introduce Energy-Based Concept Bottleneck Models (ECBM) as a unified framework 
