--- a/index.html
+++ b/index.html
@@ -369,13 +369,14 @@
         <td style="padding:20px;width:100%;vertical-align:middle">
           <heading>Honours, Membership and Sevices</heading>
           <ul>
-            <li>Hong Kong PhD Fellowship</li>
-            <li>HKUST RedBird PhD Award </li>
-            <li>IEEE Member</li>
-            <li>Australian Computer Society Member</li>
-            <li>Asia Pacific Neural Network Society Member</li>
+            <li>Hong Kong PhD Fellowship, 2022 - 2026</li>
+            <li>Conference Travel Allowance of HKPFS, 2023 - 2024</li>
+            <li>HKUST RedBird PhD Award, 2022 - 2023</li>
+            <li>IEEE Member, since 2021</li>
+            <li>Australian Computer Society Member, since 2021</li>
+            <li>Asia Pacific Neural Network Society Member, since 2021</li>
             <li>ICONIP 2023 PC Member</li>
-            <li>Teaching Assistant for ELEC 1200 A System View of Communications: from Signals to Packets, 2023. </li>
+            <li>Teaching Assistant for ELEC 1200 A System View of Communications: from Signals to Packets, 2023</li>
           </ul> 
         </td>
       </tr>
