--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <name>Xinyue XU</name>
               </p>
               <p>I am currently a PhD Candidate at The Hong Kong University of Science and Technology, 
-                advised by <a href="https://xmengli.github.io/"> Prof. Xiaomeng Li</a> and co-advised by <a href="http://www.wanghao.in/"> Prof. Hao Wang</a>. 
+                advised by <a href="https://xmengli.github.io/"> Prof. Xiaomeng Li</a> and co-advised by <a href="http://www.wanghao.in/"> Prof. Hao Wang</a> at Rutgers University. 
                 Prior of this, I completed my Bachelor degree (with Honours) at The Australian National University, 
                 where I had the privilege of being advised by <a href="https://en.wikipedia.org/wiki/Amanda_Barnard"> Senior Prof. Amanda Barnard</a>
                 and supervised by <a href="https://scholar.google.com.au/citations?user=r2-lXicAAAAJ&hl=en"> Dr. Amanda Parker</a>.
@@ -54,13 +54,13 @@
           <td style="padding:20px;width:100%;vertical-align:middle">
             <heading>Research</heading>
             <p>
-              My research interest is to apply Machine Learning to interdisciplinary (medical image analysis, environmental science, material science etc.) 
+              My research interest is to apply Machine Learning to interdisciplinary fields. 
               <br>
               In particluar, I am interested in:
               <ul>
               <li>Interpretable ML (Concept-Based Explanations, Rule-Based Models, etc.)</li>
-              <li>AutoML (Neural Architecture Search, Hyperparameter Optimization, etc.)</li>
-              <li>Clustering Analysis (Label Spreading/Propagation)</li>
+              <li>AI4Science (medical image analysis, environmental science, material science etc.)</li>
+              <li>Multimodel LLM</li>
               </ul>
             </p>
           </td>
@@ -196,8 +196,9 @@
               Ding He
               <br>
               <em>Environmental Science & Technology (ES&T)</em>, 2023
+              <em>The 6th Xiamen Symposium on Marine Environmental Sciences, 2023</em>
               <br>
-              <a href="https://pubs.acs.org/doi/pdf/10.1021/acs.est.3c00199">Paper</a>	
+              <a href="https://pubs.acs.org/doi/pdf/10.1021/acs.est.3c00199">Paper</a>i	
               <p></p>
               <p>
                 Photochemical reactions are essential components altering dissolved organic matter (DOM) chemistry. 
@@ -235,6 +236,7 @@
               <em>Honours Thesis</em>, 2022
               <br>
               ANU Database.
+              <span class="category">Clustering</span>
               <p></p>
               <p>
                 This thesis develops an enhanced version based on the original Iterative Label
